[tool.poetry]
name = "avn"
version = "0.1.0"
description = "Package for zebra finch song analysis."
authors = ["Therese Koch"]
license = "GNU General Public License v3.0"
readme = "README.md"
documentation = "https://avn.readthedocs.io/en/latest/"
homepage = "https://github.com/theresekoch/avn"
repository = "https://github.com/theresekoch/avn"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
