[tool.poetry]
name = "avn"
version = "0.2.0"
description = "Package for zebra finch song analysis."
authors = ["Therese Koch"]
license = "GNU General Public License v3.0"
readme = "README.md"
documentation = "https://avn.readthedocs.io/en/latest/"
homepage = "https://github.com/theresekoch/avn"
repository = "https://github.com/theresekoch/avn"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = ">=1.3.3"
numpy = ">=1.20.2,<1.21.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.1"
scipy = "^1.6.3"
librosa = "0.8.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.1"
nbsphinx = "^0.8.4"
ipykernel = "^5.5.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
